Fix collapsed videos when in stretch mode.

--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -213,6 +213,10 @@
 			flex: 1 1 auto;
 			content: '';
 		}
+
+		.msg {
+			flex: 0 0 auto;
+		}
 	}
 }
 
